# flotta

./: .dockerignore  .dockerignore   .gitignore  .gitmodules  .pydeps  .readthedocs.yaml  Dockerfile  Makefile  NOTES.md  README.md  config.1.yaml  config.2.yaml  docker-compose-dev.yaml  docker-compose.2clients.yaml  docker-compose.build.yaml  docker-compose.client.yaml  docker-compose.server.yaml  docker-compose.yaml  ferdelance_client.sh  main.py  os_info.py  pyproject.toml  ray_mode.md  requirements.test.txt  requirements.txt  schemas.md  setup.cfg  starter.sh  workbench.py
conf/: config.1.yaml  config.2.yaml  config.yaml  config_test.yaml
database/: __init__.py  crud.py  settings.py  startup.py  tables.py
docker/: Dockerfile  Dockerfile.client  Dockerfile.dev  Dockerfile.pypirepo  Dockerfile.server  docker-compose.client.yaml  docker-compose.server.yaml  docker-compose.yaml
docs/source/: conf.py  index.rst
examples/: workbench.ipynb  workbench.py  workbench_example_pipeline.py
ferdelance/: __init__.py  __main__.py  client.py  config.py  exceptions.py  extra.py  jobs_backend.py  logging.py  utils.py
ferdelance/cli/: __init__.py  __main__.py  base.py  models.py  visualization.py
ferdelance/client/: __init__.py  __main__.py  arguments.py  client.py  config.py  const.py  exceptions.py  models.py  schemas.py  state.py  worker.py
ferdelance/config/: __init__.py  arguments.py  config.py  logging.py
ferdelance/core/: __init__.py  artifacts.py  entity.py  environment.py  interfaces.py  model.py  plan.py  steps.py  utils.py
ferdelance/database/: __init__.py  const.py  crud.py  data.py  db_async.py  db_sync.py  schemas.py  settings.py  startup.py  tables.py  utils.py
ferdelance/datasources/: __init__.py  datasource.py  dbs.py  files.py
ferdelance/jobs/: __init__.py  local.py  server.py  utils.py
ferdelance/node/: __main__.py  api.py  deployment.py  exceptions.py  middlewares.py  security.py  startup.py
ferdelance/nodes/: central.py  decentralized.py
ferdelance/schemas/: client.py  components.py  context.py  database.py  datasources.py  errors.py  jobs.py  metadata.py  node.py  project.py  resources.py  scheduling.py  server.py  tasks.py  updates.py  utils.py  workbench.py  worker.py
ferdelance_shared/: actions.py  decode.py  dtypes.py  encode.py  exchange.py  generate.py  operations.py  schemas.py  status.py
ferdelance_workbench/: artifacts.py  context.py  models.py
flotta/: __main__.py  commons.py  const.py  logging.py  utils.py
flotta/cli/: README.md  (+2 more)
script/: client.sh  init.sh  server.sh
server/: api.py  crypto.py  middleware.py  routes.py  security.py
test/: test_main.py
tests/: README.md  __init__.py  conftest.py  crud.py  db.py  dummies.py  serverless.py  test_client.py  test_compare.py  test_distributed.py  test_encode_decode.py  test_events.py  test_files.py  test_jobs.py  test_queries.py  test_transformer.py  test_transformer_apply.py  test_transformer_discrete.py  test_transformer_inputation.py  test_transformer_pipelines.py  test_transformer_scaler.py  test_transformers.py  test_workbench.py  test_workers.py  test_workflow.py  utils.py
(+648 files in other folders)
