[metadata]
name = ferdelance
description = Fer-De-Lance, a Federated Learning framework
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: ferdelance.__version__

[options]
packages = find:

install_requires =
    aiofiles==23.1.0
    aiorwlock==1.3.0
    aiosqlite==0.19.0
    asyncpg==0.28.0
    cryptography==41.0.3
    fastapi==0.100.1
    fastapi-sqlalchemy==0.2.1
    getmac==0.9.4
    numpy==1.25.2
    pandas==2.0.3
    psutil==5.9.5
    pydantic==1.10.12
    python-dotenv==1.0.0
    python-multipart==0.0.6
    pytimeparse==1.1.8
    pyyaml==6.0.1
    requests==2.31.0
    ray==2.6.1
    scikit-learn==1.3.0
    sqlalchemy==2.0.19
    sqlalchemy[asyncio]==2.0.19
    uvicorn==0.23.2

[options.packages.find]
exclude = 
    *_env

[options.extras_require]
test =
    black==23.7.0
    pytest==7.4.0
    psycopg2-binary==2.9.6
    pytest-asyncio==0.21.1
    fastapi[all]==0.100.1

dev = 
    ferdelance[test]

prod = 
    ferdelance
