[metadata]
name = ferdelance
description = Fer-De-Lance, a Federated Learning framework
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: ferdelance.__version__

[options]
packages = find:

install_requires =
    aiofiles==23.2.1
    aiorwlock==1.4.0
    aiosqlite==0.19.0
    asyncpg==0.29.0
    cryptography==42.0.3
    fastapi==0.108.0
    fastapi-sqlalchemy==0.2.1
    httpx==0.26.0
    numpy==1.26.4
    pandas==2.2.0
    pyarrow==15.0.0
    pydantic==2.6.1
    pydantic-settings==2.1.0
    python-dotenv==1.0.1
    python-multipart==0.0.9
    pytimeparse==1.1.8
    ray==2.9.2
    ray[serve]==2.9.2
    scikit-learn==1.4.0
    sqlalchemy==2.0.27
    sqlalchemy[asyncio]==2.0.27
    uvicorn==0.27.1

[options.packages.find]
exclude = 
    *_env

[options.extras_require]
test =
    black==24.2.0
    pytest==8.0.0
    psycopg2-binary==2.9.9
    pytest-asyncio==0.23.5
    fastapi[all]==0.108.0

dev = 
    ferdelance[test]

prod = 
    ferdelance
