[metadata]
name = ferdelance
description = Fer-De-Lance, a Federated Learning framework
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: ferdelance.__version__

[options]
packages = find:

install_requires =
    aiofiles==23.2.1
    aiorwlock==1.4.0
    aiosqlite==0.20.0
    asyncpg==0.29.0
    cryptography==42.0.5
    fastapi==0.108.0
    fastapi-sqlalchemy==0.2.1
    httpx==0.27.0
    numpy==1.26.4
    pandas==2.2.1
    pyarrow==15.0.2
    pydantic==2.6.4
    pydantic-settings==2.2.1
    python-dotenv==1.0.1
    python-multipart==0.0.9
    pytimeparse==1.1.8
    ray==2.9.3
    ray[serve]==2.9.3
    scikit-learn==1.4.1.post1
    sqlalchemy==2.0.28
    sqlalchemy[asyncio]==2.0.28
    uvicorn==0.29.0

[options.packages.find]
exclude = 
    *_env

[options.extras_require]
test =
    black==24.3.0
    pytest==8.1.1
    psycopg2-binary==2.9.9
    pytest-asyncio==0.23.6
    fastapi[all]==0.108.0

dev = 
    ferdelance[test]

prod = 
    ferdelance
